change picture and rt rw

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                             </svg>
                         </div>
                         <h3 class="font-semibold text-xl text-yellow-300">Lokasi</h3>
-                        <p>Kp Gedong RT.04/01, Desa Cimanggu 2, Cibungbulang, Bogor</p>
+                        <p>Kp Gedong RT.04 RW.05, Desa Cimanggu 2, Cibungbulang, Bogor</p>
                     </div>
                 </div>
                 
@@ -257,10 +257,10 @@
                  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 backdrop-blur-sm bg-white/10 p-4 rounded-lg">
                     <img src="img/2.jpg" alt="Foto Anak 1" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
                     <img src="img/3.jpg" alt="Foto Anak 2" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/4.jpg" alt="Foto Keluarga" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
+                    <img src="img/7.jpg" alt="Foto Keluarga" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
                     <img src="img/5.jpg" alt="Foto Anak 3" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/6.jpg" alt="Foto Ayah dan Anak" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/1.jpg" alt="Foto Ibu dan Anak" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
+                    <img src="img/8.jpg" alt="Foto Ayah dan Anak" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
+                    <img src="img/9.jpg" alt="Foto Ibu dan Anak" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
                 </div>
              </div>
         </section>
