add preview image

--- a/index.html
+++ b/index.html
@@ -252,18 +252,63 @@
         
         <!-- Gallery Section -->
         <section id="gallery" class="section-bg">
-             <div class="section-content reveal">
-                 <h2 class="font-playfair text-4xl mb-8">Galeri Kenangan</h2>
-                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4 backdrop-blur-sm bg-white/10 p-4 rounded-lg">
-                    <img src="img/2.jpg" alt="Foto Anak 1" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/3.jpg" alt="Foto Anak 2" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/7.jpg" alt="Foto Keluarga" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/5.jpg" alt="Foto Anak 3" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/8.jpg" alt="Foto Ayah dan Anak" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
-                    <img src="img/9.jpg" alt="Foto Ibu dan Anak" class="rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105">
+            <div class="section-content reveal">
+                <h2 class="font-playfair text-4xl mb-8">Galeri Kenangan</h2>
+                <div class="grid grid-cols-2 md:grid-cols-3 gap-4 backdrop-blur-sm bg-white/10 p-4 rounded-lg">
+                    <img src="img/2.jpg" alt="Foto Anak 1" class="gallery-img rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105 cursor-pointer">
+                    <img src="img/3.jpg" alt="Foto Anak 2" class="gallery-img rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105 cursor-pointer">
+                    <img src="img/7.jpg" alt="Foto Keluarga" class="gallery-img rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105 cursor-pointer">
+                    <img src="img/5.jpg" alt="Foto Anak 3" class="gallery-img rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105 cursor-pointer">
+                    <img src="img/8.jpg" alt="Foto Ayah dan Anak" class="gallery-img rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105 cursor-pointer">
+                    <img src="img/9.jpg" alt="Foto Ibu dan Anak" class="gallery-img rounded-lg w-full h-full object-cover aspect-square transition-transform duration-300 hover:scale-105 cursor-pointer">
                 </div>
-             </div>
+            </div>
+            <!-- Popup Modal -->
+            <div id="gallery-modal" style="display:none; position:fixed; z-index:200; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.85); align-items:center; justify-content:center;">
+                <span id="gallery-modal-close" style="position:absolute;top:30px;right:40px;font-size:2.5rem;color:#fff;cursor:pointer;z-index:201;">&times;</span>
+                <img id="gallery-modal-img" src="" alt="" style="max-width:90vw;max-height:80vh;border-radius:1rem;box-shadow:0 8px 32px rgba(0,0,0,0.5);border:6px solid #fff;">
+                <div id="gallery-modal-caption" style="color:#fff;text-align:center;margin-top:1rem;font-size:1.2rem;"></div>
+            </div>
         </section>
+        <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const imgs = document.querySelectorAll('.gallery-img');
+            const modal = document.getElementById('gallery-modal');
+            const modalImg = document.getElementById('gallery-modal-img');
+            const modalClose = document.getElementById('gallery-modal-close');
+
+            imgs.forEach(img => {
+                img.addEventListener('click', function() {
+                    modal.style.display = 'flex';
+                    modalImg.src = this.src;
+                    modalImg.alt = this.alt;
+                    document.body.style.overflow = 'hidden';
+                });
+            });
+
+            modalClose.addEventListener('click', function() {
+                modal.style.display = 'none';
+                modalImg.src = '';
+                document.body.style.overflow = '';
+            });
+
+            modal.addEventListener('click', function(e) {
+                if (e.target === modal) {
+                    modal.style.display = 'none';
+                    modalImg.src = '';
+                    document.body.style.overflow = '';
+                }
+            });
+
+            document.addEventListener('keydown', function(e) {
+                if (modal.style.display === 'flex' && (e.key === 'Escape' || e.key === 'Esc')) {
+                    modal.style.display = 'none';
+                    modalImg.src = '';
+                    document.body.style.overflow = '';
+                }
+            });
+        });
+        </script>
 
         <!-- Form & Map Section -->
         <section id="form-section">
